--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'NicoMoji';
-    src: url('../../public/fonts/NICOMOJI-PLUS_V2.TTF') format('truetype');
+    font-family: "NicoMoji";
+    src: url("../../public/fonts/NICOMOJI-PLUS_V2.TTF") format("truetype");
     /* 追加のフォント形式をサポートする場合、ここに追加してください */
 }
